Improve Eclipse installation INI files. Document Eclipse installation generation.